Clarify data source: Nov 2025 House Oversight release
- Update header to show "Data: Nov 2025 release"
- Add tooltip explaining it doesn't include DOJ Jan 2026 release
- Update README with link to DOJ release for reference

--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
                 <div class="stat-item">Docs: <span id="statDocs">-</span></div>
                 <div class="stat-item">Chunks: <span id="statChunks">-</span></div>
                 <div class="stat-item stat-clickable" id="clusterStat" title="Click to browse clusters">Clusters: <span id="statClusters">-</span></div>
-                <div class="stat-item" style="color:var(--text-muted);font-size:0.75rem" title="Data source last updated">Data: Jan 31, 2026</div>
+                <div class="stat-item" style="color:var(--text-muted);font-size:0.75rem" title="House Oversight Committee Nov 2025 release. Does not include DOJ Jan 2026 release.">Data: Nov 2025 release</div>
                 <a href="https://github.com/wongpeiting/epstein-files-explorer" target="_blank" rel="noopener noreferrer" class="about-link" title="About this project">?</a>
             </div>
         </div>
